--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.3",
+    "@types/socket.io": "^3.0.2",
+    "@types/uuid": "^9.0.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
